# memory-munch

./: .gitignore  .tmp-codex-only.toml  AGANTS.md  AGENTS.md  BRAND_STYLE.md  OPENCLAW_INTEGRATION_PREFER_FALLBACK.md  README.md  TECHNICAL.md  dmemorymunch-mpc.toml  pyproject.toml
.github/workflows/: ci.yml
extensions/memory-munch-tools/: LICENSE  index.ts  openclaw.plugin.json  openclaw_memory_munch_bridge.py  package.json
extensions/memory-munch-tools/sdk/: client.ts  files.ts  model.ts  node_backend.ts  node_bridge.ts  node_config.ts  node_parser.ts  node_paths.ts  raw.ts
mimmic/: ANSWER_KEY.md  ASK_ONLY.md  MEMORY.md  TEST_QUESTIONS.md  dmemorymunch-mpc.toml
mimmic/memory/crm/: contacts-snapshot-2026-03-01.md
mimmic/memory/daily/: 2026-01-journal.md  2026-02-journal.md  2026-03-journal.md
mimmic/memory/inbox/: 2026-03-05-convention-business-cards.md
mimmic/memory/ops/: runbooks.md
scripts/: create_memory_munch_slack_gif.py  enforce_openclaw_memory_mode.sh  install_openclaw_memory_munch_plugin.sh  openclaw_memory_munch_bridge.py  run_openclaw_memory_duel.sh  run_openclaw_memory_smoke.sh  run_terminal_bughunt.sh  set_memory_munch_runtime_mode.sh  undo_openclaw_memory_munch_install.sh  verify_openclaw_memory_munch.sh
src/dmemorymunch_mpc/: __init__.py  _stopwords.py  cli.py  config.py  db.py  indexer.py  models.py  parser.py  paths.py  retrieval.py  server.py  token_tracker.py  tools.py
tests/e2e/: test_smoke.py
tests/integration/: test_index_and_retrieval.py  test_openclaw_memory_fixtures.py
tests/unit/: test_parser.py  test_paths.py
(+21 files in other folders)
